# statmate-ai

./: .gitignore  README.md  main.py  pyproject.toml  workflow_graph.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: initial_setup.yml
statmate/: __init__.py
statmate/agent/: __init__.py  agent_builder.py  comparison_agents.py  normality_agent.py
statmate/agents/: __init__.py  agent_builder.py  anova_agents.py  auxilary_agents.py  cathegorical_comparison_agent.py  comparison_agents.py  equality_of_variance_agents.py  initial_insights_agent.py  linear_corellation_agents.py  normality_agent.py  router_agent.py  summarizer_agent.py
statmate/statistical_core/: __init__.py  anova.py  base.py  cathegorical_comparison.py  comparison.py  equality_of_variance.py  linear_correlation.py  normality.py
statmate/workflow/: statmate_flow.py
