[project]
name = "statmate-ai"
version = "0.1.0"
description = "AI-assisted statistical analysis tool for clinical research"
readme = "README.md"
authors = [{ name = "Adam Krysztopa", email = "adam_krysztopa@mechai.pl" }]
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "numpy",
    "scipy",
    "pandas",
    "statsmodels",
    "matplotlib",
    "seaborn",
    "fastapi",
    "streamlit",
    "pydantic-ai",
    "langgraph",
    "joblib>=1.4.2",
    "grandalf>=0.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.289,<0.0.290",
    "pyright>=1.1.320,<1.1.321",
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
]

[tool.uv]
default-groups = []
prerelease = "if-necessary-or-explicit"

[tool.ruff]
select = ["E", "F", "W", "C", "N", "Q", "B", "I"]
ignore = []
line-length = 120
extend-select = ["ANN", "ARG", "D", "PIE", "PT", "RET", "S", "UP"]
fix = true


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
ignore-names = ["X*"]

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
